--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:prod": "set NODE_ENV=production& nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url /js",
-    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url /js"
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url /js"
   },
   "author": "Ruben Molina",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^7.8.0",
     "axios": "^0.18.0",
     "bcryptjs": "^3.0.2",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
