--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-NODE_ENV=production
+NODE_ENV=development
 PORT=3000
 DATABASE_USER= ruben201
 DATABASE=mongodb+srv://ruben201:<PASSWORD>@natours.4wnvbsx.mongodb.net/?retryWrites=true&w=majority&appName=Natours
