--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning APIs ",
   "main": "app.js",
   "scripts": {
-    "start": "server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "start:prod": "node server.js",
     "debug": "ndb server.js",
