--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "author": "Ruben Molina",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^3.1.10",
     "@babel/polyfill": "^7.4.4",
     "@stripe/stripe-js": "^7.8.0",
     "axios": "^0.18.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -34,6 +34,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.1",
     "nodemailer": "^7.0.3",
+    "nodemon": "^3.1.10",
     "pug": "^2.0.3",
     "sharp": "^0.34.3",
     "slugify": "^1.6.6",
@@ -54,6 +55,6 @@
     "prettier": "^3.5.3"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": "^10"
   }
 }
